# praxis

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml  tests.yml
assets/styles/: rsc.mplstyle  springer.mplstyle
docs/: colour-palettes.md  cookbook.md  index.md  plot-types.md  techniques.md
examples/: generate_examples.py
praxis/: __init__.py
praxis/analysis/: __init__.py  baseline.py  fft.py  fitting.py  interpolation.py  normalisation.py  peaks.py  report.py  smoothing.py  statistics.py  templates.py
praxis/batch/: batch.py
praxis/core/: exporter.py  loader.py  utils.py
praxis/sample_data/: __init__.py  _generate.py  afm_profile.csv  battery_cycling.csv  bet_isotherm.csv  cv_redox.csv  dielectric_relaxation.csv  dma_polymer.csv  dsc_polymer.csv  eds_nacl.csv  ftir_pmma.csv  hardness_vickers.csv  hplc_chromatogram.csv  impedance_rc.csv  iv_diode.csv  mass_spec_caffeine.csv  mh_loop.csv  nanoindentation_loaddisp.csv  nmr_ethanol.csv  piezo_pe_loop.csv  raman_silicon.csv  saxs_iq.csv  stress_strain_steel.csv  tga_pmma.csv  thermal_conductivity_pyrex.csv  uvvis_au_np.csv  xps_c1s.csv  xrd_silicon.csv
praxis/styles/: acs.mplstyle  elsevier.mplstyle  ieee.mplstyle  mdpi.mplstyle  nature.mplstyle  science.mplstyle  wiley.mplstyle
praxis/techniques/: afm.py  battery_cycling.py  bet.py  chromatography.py  cv_measurement.py  dielectric.py  dsc_tga.py  hardness.py  impedance.py  iv_curves.py  magnetometry.py  mass_spec.py  mechanical.py  nanoindentation.py  nmr.py  piezoelectric.py  saxs.py  sem_eds.py  spectroscopy.py  xps.py  (+2 more)
references/: colour-palettes.md  cookbook.md  journal-styles.md  plot-types.md  techniques.md  workflows.md
scripts/: __init__.py
tests/: test_battery_cycling.py  test_fft.py  test_fitting.py  test_interpolation.py  test_loader.py  test_normalisation.py  test_peaks.py  test_plotter.py  test_smoothing.py  test_statistics.py  test_techniques_wave3.py
(+40 files in other folders)
