[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis-sci"
version = "1.0.0"
description = "Scientific data analysis and publication-quality plotting for 50+ characterisation techniques."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Zois Tsikriteas" },
]
keywords = [
    "scientific-computing",
    "data-analysis",
    "matplotlib",
    "characterisation",
    "materials-science",
    "xrd",
    "impedance-spectroscopy",
    "publication-figures",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "lmfit>=1.2",
    "openpyxl>=3.1",
    "uncertainties>=3.1",
]

[project.optional-dependencies]
hdf5 = ["h5py>=3.8"]
tiff = ["Pillow>=10.0"]
pdf = ["pdfplumber>=0.10"]
encoding = ["charset-normalizer>=3.0"]
all = [
    "h5py>=3.8",
    "Pillow>=10.0",
    "pdfplumber>=0.10",
    "charset-normalizer>=3.0",
]
test = ["pytest>=7.0", "charset-normalizer>=3.0"]

[project.urls]
Homepage = "https://github.com/zmtsikriteas/praxis"
Repository = "https://github.com/zmtsikriteas/praxis"
Issues = "https://github.com/zmtsikriteas/praxis/issues"
Changelog = "https://github.com/zmtsikriteas/praxis/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["praxis*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
praxis = ["styles/*.mplstyle", "sample_data/*.csv"]
